modi eng footer

--- a/eng.html
+++ b/eng.html
@@ -11,12 +11,13 @@
 
     <link rel="stylesheet" href="styles.css" />
 
-    <title> Resume - Matias Cusmai - 2023</title>
+    <title>Resume - Matias Cusmai - 2023</title>
 </head>
 
 <body>
+    <div class="cont_body">
     <header class="header">
-        <h1 class="h1_eng">matiCusmai > <span>RESUME</span></h1>
+        <h1>matiCusmai > <span>RESUME</span></h1>
         <div class="redes">
             <div title="Spanish" class="eng"><a href="https://maticusmai.github.io/"
                 target="_parent">ES</a></div>
@@ -39,23 +40,25 @@
                     <p>DEV & DESIGN</p>
                 </div>
             </div>
-            <div class="contenedor__col col2" style="background-color: black;">
+            <a href="https://portfolio-mati-cusmai.netlify.app/" target="_blank" class="contenedor__col col2"
+                style="background-color: black;">
                 <div class="cont__nombre">
-                    <a class="link__col" style="color: white;" href="https://portfolio-mati-cusmai.netlify.app/eng"
-                        target="_blank">Portfolio</a>
+                    <p class="link__col" style="color: white;">Portfolio</p>
                 </div>
-            </div>
-            <div class="contenedor__col col2">
+            </a>
+            <a href="mailto:maticusmai@gmail.com" target="_blank" class="contenedor__col col2">
                 <div class="cont__nombre">
                     <p><strong>EMAIL</strong></p>
-                    <a class="link__col" href="mailto:maticusmai@gmail.com" target="_blank">maticusmai@gmail.com</a>
-                    <br>
-                    <br>
-                    <p><strong>WSP</strong></p>
-                    <a class="link__col" href="https://api.whatsapp.com/send?phone=541130195479" target="_blank">(+54)
-                        11 3019 5479</a>
+                    <p class="link__col">maticusmai@gmail.com</p>
                 </div>
-            </div>
+            </a>
+            <a href="https://api.whatsapp.com/send?phone=541130195479" target="_blank" class="contenedor__col col2">
+                <div class="cont__nombre">
+                    <p><strong>WSP</strong></p>
+                    <p class="link__col">(+54)
+                        11 3019 5479</p>
+                </div>
+            </a>
 
         </div>
 
@@ -86,7 +89,6 @@
                     I am now continuing to expand my knowledge and seeking new work experiences that contribute to my
                     professional development.
                 </p>
-
             </div>
             <div class="box">
                 <h3><span>Skills</span>& ABILITIES</h3>
@@ -181,21 +183,36 @@
                     <br> 2001/2003 - UCES (incomplete)
                 </h4>
             </div>
-            <div class="box bg-black">
+        </div>
+    </div>
+    
+        <footer class="bg-black">
+
+            <div>
                 <h3><span>My</span>PORTFOLIO</h3>
                 <hr>
-                <p><strong>Portfolio summary</strong></p>
-                <a class="link__col-w" href="https://portfolio-mati-cusmai.netlify.app/" target="_blank">Design and Dev</a>
-                <p><strong>Behance</strong></p>
-                <a class="link__col-w" href="https://www.behance.net/maticusmai" target="_blank">Portfolio /
-                    Designer</a>
-                <p><strong>GitHub</strong></p>
-                <a class="link__col-w" href="https://github.com/matiCusmai" target="_blank">Portfolio / Code</a>
-                <br>
-                <p><strong>Linkedin</strong></p>
-                <a class="link__col-w" href="https://github.com/matiCusmai" target="_blank">Reference / Linkedin</a>
             </div>
-        </div>
+            <div class="miportfolio">
+                <div class="items">
+                    <p><strong>Portfolio summary</strong></p>
+                    <a class="link__col-w" href="https://portfolio-mati-cusmai.netlify.app/" target="_blank">Design and Dev</a>
+                </div>
+                <div class="items">
+                    <p><strong>Behance</strong></p>
+                    <a class="link__col-w" href="https://www.behance.net/maticusmai" target="_blank">Portfolio /
+                        Designer</a>
+                </div>
+                <div class="items">
+                    <p><strong>GitHub</strong></p>
+                    <a class="link__col-w" href="https://github.com/matiCusmai" target="_blank">Portfolio / Code</a>
+                </div>
+                <div class="items">
+                    <p><strong>Linkedin</strong></p>
+                    <a class="link__col-w" href="https://github.com/matiCusmai" target="_blank">Reference / Linkedin</a>
+                </div>
+            </div>
+        
+        </footer>
     </main>
 </body>
 
