--- a/index.html
+++ b/index.html
@@ -15,209 +15,214 @@
 </head>
 
 <body>
+
     <div class="cont_body">
-    <header class="header">
-        <h1>matiCusmai > <span>CV</span></h1>
-        <div class="redes">
-            <div title="English" class="eng"><a href="/eng.html" target="_parent">EN</a></div>
-            <div title="Linkedin" class="icon__rrss"><a href="https://www.linkedin.com/in/maticusmai/"
-                    target="_blank"><img src="img/lilnkedin.png" alt="linkedin"></a></div>
-            <div title="Github" class="icon__rrss"><a href="https://github.com/matiCusmai" target="_blank"><img
-                        src="img/github.png" alt="github"></a></div>
-            <div title="Portfolio - Behance" class="icon__rrss"><a href="https://www.behance.net/maticusmai"
-                    target="_blank"><img src="img/behance.png" alt="behance"></a></div>
-        </div>
-    </header>
-
-    <main class="section">
-
-        <div class="columna">
-            <div class="contenedor__col">
-                <img src="./img/fotomati.jpg" class="foto__circulo" alt="">
-                <div class="cont__nombre">
-                    <h2>Matias Cusmai</h2>
-                    <p>DEV & DESIGN</p>
-                </div>
+        <header class="header">
+            <h1>matiCusmai > <span>CV</span></h1>
+            <div class="redes">
+                <div title="English" class="eng"><a href="/eng.html" target="_parent">EN</a></div>
+                <div title="Linkedin" class="icon__rrss"><a href="https://www.linkedin.com/in/maticusmai/"
+                        target="_blank"><img src="img/lilnkedin.png" alt="linkedin"></a></div>
+                <div title="Github" class="icon__rrss"><a href="https://github.com/matiCusmai" target="_blank"><img
+                            src="img/github.png" alt="github"></a></div>
+                <div title="Portfolio - Behance" class="icon__rrss"><a href="https://www.behance.net/maticusmai"
+                        target="_blank"><img src="img/behance.png" alt="behance"></a></div>
             </div>
-            <a href="https://portfolio-mati-cusmai.netlify.app/" target="_blank" class="contenedor__col col2"
-                style="background-color: black;">
-                <div class="cont__nombre">
-                    <p class="link__col" style="color: white;">Ver Portfolio</p>
-                </div>
-            </a>
-            <a href="mailto:maticusmai@gmail.com" target="_blank" class="contenedor__col col2">
-                <div class="cont__nombre">
-                    <p><strong>EMAIL</strong></p>
-                    <p class="link__col">maticusmai@gmail.com</p>
-                </div>
-            </a>
-            <a href="https://api.whatsapp.com/send?phone=541130195479" target="_blank" class="contenedor__col col2">
-                <div class="cont__nombre">
-                    <p><strong>WSP</strong></p>
-                    <p class="link__col">(+54)
-                        11 3019 5479</p>
-                </div>
-            </a>
+        </header>
 
-        </div>
+        <main class="section">
 
-        <div class="content__box">
-            <div class="box">
-                <h3><span>Mi</span>OBJETIVO</h3>
-                <hr>
-                <p>Estoy buscando oportunidades para trabajar en una empresa, ya sea nacional o multinacional, en el
-                    área de diseño gráfico y/o desarrollo web donde pueda utilizar mis habilidades y experiencia para
-                    contribuir al éxito de la empresa mientras sigo creciendo profesionalmente.
-                </p>
+            <div class="columna">
+                <div class="contenedor__col">
+                    <img src="./img/fotomati.jpg" class="foto__circulo" alt="">
+                    <div class="cont__nombre">
+                        <h2>Matias Cusmai</h2>
+                        <p>DEV & DESIGN</p>
+                    </div>
+                </div>
+                <a href="https://portfolio-mati-cusmai.netlify.app/" target="_blank" class="contenedor__col col2"
+                    style="background-color: black;">
+                    <div class="cont__nombre">
+                        <p class="link__col" style="color: white;">Ver Portfolio</p>
+                    </div>
+                </a>
+                <a href="mailto:maticusmai@gmail.com" target="_blank" class="contenedor__col col2">
+                    <div class="cont__nombre">
+                        <p><strong>EMAIL</strong></p>
+                        <p class="link__col">maticusmai@gmail.com</p>
+                    </div>
+                </a>
+                <a href="https://api.whatsapp.com/send?phone=541130195479" target="_blank" class="contenedor__col col2">
+                    <div class="cont__nombre">
+                        <p><strong>WSP</strong></p>
+                        <p class="link__col">(+54)
+                            11 3019 5479</p>
+                    </div>
+                </a>
+
             </div>
-            <div class="box">
-                <h3><span>Acerca</span>DE MI</h3>
-                <hr>
-                <p>Con mas de 10 años de experiencia en el campo del diseño gráfico y la comunicación visual, he
-                    trabajado con diversas agencias de publicidad y estudios de comunicación, desarrollando piezas de
-                    branding, packaging, publicidad y editorial para marcas reconocidas internacionalmente como
-                    Unilever, Knorr, Dannone, La serenísima, AdeS, Mistral, Natura, entre otros...
-                </p>
-                <p> Además, he adquirido conocimientos en desarrollo web, especializándome en la creación de mailing,
-                    landing pages y sitios web.
-                </p>
-                <p>
-                    También presentaciones
-                    multimedia, banners y anuncios para redes sociales.
-                </p>
-                <p>
-                    Ahora sigo expandiendo mis conocimientos y buscando nuevas experiencias de trabajo que contribuyan a
-                    mi formación.
-                </p>
-            </div>
-            <div class="box">
-                <h3><span>Aptitudes</span>Y HABILIDADES</h3>
-                <hr>
-                <ul>
-                    <li><strong>Inglés</strong> (intermedio)</li>
-                    <li><strong>Español</strong> (nativo)</li>
-                    <li><strong>Autodidacta</strong></li>
-                    <li><strong>Plataformas Mac y Pc</strong></li>
-                    <li><strong>Programas:</strong>
-                        <br>Adobe Creative Suite (Illustrator, Photoshop, Indesign)
-                        <br>Figma (Prototipado)
-                        <br>Visual Studio Code
-                    </li>
-                    <li><strong>Lenguajes y Frameworks:</strong>
-                        <br> HTML5
-                        <br> CSS3
-                        <br> SASS
-                        <br> JavaScript
-                        <br> Npm
-                        <br> React
-                        <br> Bootstrap
-                        <br> Git - GitHub
-                    </li>
-                    <li><strong>Organizado</strong></li>
-                    <li><strong>Trabajo en equipo</strong></li>
-                    <br>
-                </ul>
-            </div>
-            <div class="box bg">
-                <h3><span>Mi</span>EXPERIENCIA</h3>
-                <hr>
-                <div>
-                    <h4> <strong>2018/actual – Freelancer </strong>
-                        <br> (Clientes propios y agencias)
-                    </h4>
-                    <ul>
-                        <li>Desarrollo de sitios web y app (responsive y mobile first)</li>
-                        <li>Diseño gráfico - Editorial - Branding - Pop – Packaging - Otros</li>
-                    </ul>
-                    <br>
+
+            <div class="content__box">
+                <div class="box">
+                    <h3><span>Mi</span>OBJETIVO</h3>
                     <hr>
+                    <p>Estoy buscando oportunidades para trabajar en una empresa, ya sea nacional o multinacional, en el
+                        área de diseño gráfico y/o desarrollo web donde pueda utilizar mis habilidades y experiencia
+                        para
+                        contribuir al éxito de la empresa mientras sigo creciendo profesionalmente.
+                    </p>
                 </div>
-                <div>
-                    <h4> <strong>2015/2018 - Digital Dots </strong>
-                        <br>Estudio de diseño gráfico y desarrollo multimedia
-                    </h4>
-                    <ul>
-                        <li>Responsable del área de diseño (Branding, Editorial, y piezas en general)</li>
-                        <li>Armado de originales para impresión offset, laca sectorizada, cortes y troquelado.</li>
-                        <li>Desarrollo de sitios web - diseño y maquetación</li>
-                    </ul>
-                    <h5>Contacto Ref.: Federico Meliz (Director), Matias Alonso (Dev)</h5>
+                <div class="box">
+                    <h3><span>Acerca</span>DE MI</h3>
                     <hr>
+                    <p>Con mas de 10 años de experiencia en el campo del diseño gráfico y la comunicación visual, he
+                        trabajado con diversas agencias de publicidad y estudios de comunicación, desarrollando piezas
+                        de
+                        branding, packaging, publicidad y editorial para marcas reconocidas internacionalmente como
+                        Unilever, Knorr, Dannone, La serenísima, AdeS, Mistral, Natura, entre otros...
+                    </p>
+                    <p> Además, he adquirido conocimientos en desarrollo web, especializándome en la creación de
+                        mailing,
+                        landing pages y sitios web.
+                    </p>
+                    <p>
+                        También presentaciones
+                        multimedia, banners y anuncios para redes sociales.
+                    </p>
+                    <p>
+                        Ahora sigo expandiendo mis conocimientos y buscando nuevas experiencias de trabajo que
+                        contribuyan a
+                        mi formación.
+                    </p>
                 </div>
-                <div>
-                    <h4> <strong>2012/2015 - Promoption</strong>
-                        <br>Agencia de Marketing Promocional
-                    </h4>
-                    <ul>
-                        <li>Diseño de Packaging</li>
-                        <li>Piezas Promocionales BTL/POP</li>
-                    </ul>
-                    <h5>Contacto Ref.: Gabriel Lendner (Director de Arte)</h5>
+                <div class="box">
+                    <h3><span>Aptitudes</span>Y HABILIDADES</h3>
                     <hr>
-                </div>
-                <div>
-                    <h4> <strong>2009/2012 – Ibris</strong>
-                        <br>Agencia de Comunicaciòn y Creatividad Publicitaria
-                    </h4>
                     <ul>
-                        <li>Diseño de productos digitales (Web, Landing pages, Newsletter, etc)</li>
-                        <li>Maquetación (Diseño, Html, Css) trabajé en equipo con programadores</li>
+                        <li><strong>Inglés</strong> (intermedio)</li>
+                        <li><strong>Español</strong> (nativo)</li>
+                        <li><strong>Autodidacta</strong></li>
+                        <li><strong>Plataformas Mac y Pc</strong></li>
+                        <li><strong>Programas:</strong>
+                            <br>Adobe Creative Suite (Illustrator, Photoshop, Indesign)
+                            <br>Figma (Prototipado)
+                            <br>Visual Studio Code
+                        </li>
+                        <li><strong>Lenguajes y Frameworks:</strong>
+                            <br> HTML5
+                            <br> CSS3
+                            <br> SASS
+                            <br> JavaScript
+                            <br> Npm
+                            <br> React
+                            <br> Bootstrap
+                            <br> Git - GitHub
+                        </li>
+                        <li><strong>Organizado</strong></li>
+                        <li><strong>Trabajo en equipo</strong></li>
+                        <br>
                     </ul>
-                    <h5>Contacto Ref.: Nicolás Costela (Director), Alexander Gonzalez (Socio), Maru Ballesteros
-                        (Directora de
-                        Arte)</h5>
+                </div>
+                <div class="box bg">
+                    <h3><span>Mi</span>EXPERIENCIA</h3>
+                    <hr>
+                    <div>
+                        <h4> <strong>2018/actual – Freelancer </strong>
+                            <br> (Clientes propios y agencias)
+                        </h4>
+                        <ul>
+                            <li>Desarrollo de sitios web y app (responsive y mobile first)</li>
+                            <li>Diseño gráfico - Editorial - Branding - Pop – Packaging - Otros</li>
+                        </ul>
+                        <br>
+                        <hr>
+                    </div>
+                    <div>
+                        <h4> <strong>2015/2018 - Digital Dots </strong>
+                            <br>Estudio de diseño gráfico y desarrollo multimedia
+                        </h4>
+                        <ul>
+                            <li>Responsable del área de diseño (Branding, Editorial, y piezas en general)</li>
+                            <li>Armado de originales para impresión offset, laca sectorizada, cortes y troquelado.</li>
+                            <li>Desarrollo de sitios web - diseño y maquetación</li>
+                        </ul>
+                        <h5>Contacto Ref.: Federico Meliz (Director), Matias Alonso (Dev)</h5>
+                        <hr>
+                    </div>
+                    <div>
+                        <h4> <strong>2012/2015 - Promoption</strong>
+                            <br>Agencia de Marketing Promocional
+                        </h4>
+                        <ul>
+                            <li>Diseño de Packaging</li>
+                            <li>Piezas Promocionales BTL/POP</li>
+                        </ul>
+                        <h5>Contacto Ref.: Gabriel Lendner (Director de Arte)</h5>
+                        <hr>
+                    </div>
+                    <div>
+                        <h4> <strong>2009/2012 – Ibris</strong>
+                            <br>Agencia de Comunicaciòn y Creatividad Publicitaria
+                        </h4>
+                        <ul>
+                            <li>Diseño de productos digitales (Web, Landing pages, Newsletter, etc)</li>
+                            <li>Maquetación (Diseño, Html, Css) trabajé en equipo con programadores</li>
+                        </ul>
+                        <h5>Contacto Ref.: Nicolás Costela (Director), Alexander Gonzalez (Socio), Maru Ballesteros
+                            (Directora de
+                            Arte)</h5>
+                    </div>
+                </div>
+                <div class="box">
+                    <h3><span>Mi</span>FORMACION</h3>
+                    <hr>
+                    <h4> <strong>Desarrollador FrontEnd – React</strong>
+                        <br>2022 - CODERHOUSE
+                    </h4>
+                    <h4><strong>Desarrollador FullStack</strong>
+                        <br>2021 - UDEMY
+                    </h4>
+                    <h4> <strong>Diseñador Gráfico</strong>
+                        <br> 2004/2009 - FADU / UBA
+                    </h4>
+                    <h4> <strong>Publicidad</strong>
+                        <br> 2001/2003 - UCES (incompleto)
+                    </h4>
                 </div>
             </div>
-            <div class="box">
-                <h3><span>Mi</span>FORMACION</h3>
-                <hr>
-                <h4> <strong>Desarrollador FrontEnd – React</strong>
-                    <br>2022 - CODERHOUSE
-                </h4>
-                <h4><strong>Desarrollador FullStack</strong>
-                    <br>2021 - UDEMY
-                </h4>
-                <h4> <strong>Diseñador Gráfico</strong>
-                    <br> 2004/2009 - FADU / UBA
-                </h4>
-                <h4> <strong>Publicidad</strong>
-                    <br> 2001/2003 - UCES (incompleto)
-                </h4>
-            </div>
-        </div>
     </div>
-    
-        <footer class="bg-black">
 
-            <div>
-                <h3><span>Mi</span>PORTFOLIO</h3>
-                <hr>
+    <footer>
+
+        <div>
+            <h3><span>Mi</span>PORTFOLIO</h3>
+            <hr>
+        </div>
+        <div class="miportfolio">
+            <div class="items">
+                <p><strong>Portfolio Resumen</strong></p>
+                <a class="link__col-w" href="https://portfolio-mati-cusmai.netlify.app/" target="_blank">Diseño
+                    y
+                    Desarrollo</a>
             </div>
-            <div class="miportfolio">
-                <div class="items">
-                    <p><strong>Portfolio Resumen</strong></p>
-                    <a class="link__col-w" href="https://portfolio-mati-cusmai.netlify.app/" target="_blank">Diseño
-                        y
-                        Desarrollo</a>
-                </div>
-                <div class="items">
-                    <p><strong>Behance</strong></p>
-                    <a class="link__col-w" href="https://www.behance.net/maticusmai" target="_blank">Portfolio /
-                        Diseñador</a>
-                </div>
-                <div class="items">
-                    <p><strong>GitHub</strong></p>
-                    <a class="link__col-w" href="https://github.com/matiCusmai" target="_blank">Portfolio /
-                        Código</a>
-                </div>
-                <div class="items">
-                    <p><strong>Linkedin</strong></p>
-                    <a class="link__col-w" href="https://github.com/matiCusmai" target="_blank">Referencias /
-                        Linkedin</a>
-                </div>
+            <div class="items">
+                <p><strong>Behance</strong></p>
+                <a class="link__col-w" href="https://www.behance.net/maticusmai" target="_blank">Portfolio /
+                    Diseñador</a>
             </div>
-        
-        </footer>
+            <div class="items">
+                <p><strong>GitHub</strong></p>
+                <a class="link__col-w" href="https://github.com/matiCusmai" target="_blank">Portfolio /
+                    Código</a>
+            </div>
+            <div class="items">
+                <p><strong>Linkedin</strong></p>
+                <a class="link__col-w" href="https://github.com/matiCusmai" target="_blank">Referencias /
+                    Linkedin</a>
+            </div>
+        </div>
+
+    </footer>
     </main>
 </body>
 
